# madness

./: Cargo.toml  LICENSE  README.md
examples/: simple_advertisement.rs
src/: dns.rs  lib.rs  packet.rs  service.rs
src/dns/: header.rs  mod.rs  packet.rs  resource_record.rs  traits.rs
src/dns/rdata/: a.rs  aaaa.rs  mod.rs  ptr.rs  srv.rs  txt.rs
