[package]
name = "tokio-mdns"
version = "0.1.0"
authors = ["mpostma <postma.marin@protonmail.com>"]
edition = "2018"

[dependencies]
dns-parser = "0.8.0"
either = "1.6.1"
futures = "0.3.5"
net2 = "0.2"
lazy_static = "1.4.0"
rand = "0.7.3"
tokio = { version = "0.2", features = ["net", "sync", "time"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
