[package]
name = "madness"
version = "0.1.0"
authors = ["mpostma <postma.marin@protonmail.com>"]
edition = "2018"
keywords = ["mdns", "service-discovery", "network"]
repository = "https://github.com/MarinPostma/madness"
description = "A mDNS server/client based on tokio"
license-file = "LICENSE"

[dependencies]
dns-parser = "0.8.0"
either = "1.6.1"
futures = "0.3.5"
net2 = "0.2"
lazy_static = "1.4.0"
rand = "0.7.3"
tokio = { version = "0.2", features = ["net", "sync", "time"] }
mdns = "1.1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
