[package]
name = "madness"
version = "0.1.0"
authors = ["mpostma <postma.marin@protonmail.com>"]
edition = "2018"
keywords = ["mdns", "service-discovery", "network"]
repository = "https://github.com/MarinPostma/madness"
description = "A mDNS server/client based on tokio"
license-file = "LICENSE"

[dependencies]
dns-parser = "0.8.0"
futures = "0.3.5"
net2 = "0.2"
once_cell = "1.4.1"
tokio = { version = "0.2", features = ["net", "sync", "time"] }
mdns = "1.1.0"

[dev-dependencies]
rand = "0.7.3"
tokio = { version = "0.2", features = ["full"] }
